@@ -1,5 +1,6 @@
 for version 4.next
     - Fix disabling balloon title changes menu option.
+    - Ignore docked windows and continue looking when matching command by name.
 
 for version 4.1
     - Fix bug 431297: Fall back to window title and class name when launching if
